--- a/app/views/timesheet/index.html.erb
+++ b/app/views/timesheet/index.html.erb
@@ -1,11 +1,14 @@
-<% html_title "Allison Timesheets" %>
+<% html_title "Timesheets" %>
 
 <% content_for :sidebar do %>
   <h3>Recent Timesheets</h3>
 
   <ul>
   <% @recent_timesheets.each do |ts| %>
-    <li><%= link_to ts.spent_on, { :action => 'index', :date => ts.spent_on, :project_id => params[:project_id] }, :class => ("selected" if @date.eql? ts.spent_on.to_s) %></li>
+    <li><%= link_to ts.spent_on, { :action => 'index',
+                                   :date => ts.spent_on,
+                                   :project_id => params[:project_id] },
+                                   :class => ("selected" if @date.eql? ts.spent_on.to_s) %></li>
   <% end %>
   </ul>
 <% end %>
@@ -15,7 +18,7 @@
   <h2>ATI Timesheet</h2>
   <table class="list time-entries">
     <thead>
-      <tr><th>Project</th><th>Issue</th><th>Activity</th><th>Bugzilla #</th><th>Hours</th><th>Comment</th></tr>
+      <tr><th>Project</th><th>Issue</th><th>Activity</th><th>Hours</th><th>Comment</th></tr>
     </thead>
     <tbody>
     <% @entries.each do |entry| %>
@@ -23,11 +26,6 @@
         <td><%= link_to_project(entry.issue.project) %>
         <td class="subject"><%= link_to_issue(entry.issue, :subject => true, :tracker => false) %></td>
         <td><%= entry.activity.name %></td>
-        <td>
-          <a href="https://bugzilla.ati.dev.allegient.net/show_bug.cgi?id=<%= entry.issue.custom_value_for(6).value %>" target="bugzilla">
-            <%= entry.issue.custom_value_for(6).value %>
-          </a>
-        </td>
         <td><a href="/time_entries/<%= entry.id %>/edit"><%= entry.hours %></a></td>
         <td class="subject"><%= entry.comments %></td>
       </tr>
