Moved hours over a bit

--- a/app/views/timesheet/index.html.erb
+++ b/app/views/timesheet/index.html.erb
@@ -32,7 +32,7 @@
     <% end %>
     </tbody>
     <tfoot>
-      </th><th></th><th></th><th></th><th></th><th><%= @total_hours %> hours</th><th></th></tr>
+      </th><th></th><th></th><th></th><th><%= @total_hours %> hours</th><th></th></tr>
     </tfoot>
   </table>
 
