--- a/app/views/timesheet/index.html.erb
+++ b/app/views/timesheet/index.html.erb
@@ -23,8 +23,8 @@
     <tbody>
     <% @entries.each do |entry| %>
       <tr>
-        <td><%= link_to_project(entry.issue.project) %>
-        <td class="subject"><%= link_to_issue(entry.issue, :subject => true, :tracker => false) %></td>
+        <td><%= link_to_project(entry.project) %>
+        <td class="subject"><%= if defined?(entry.issue.id) then link_to_issue(entry.issue, :subject => true, :tracker => false) end %></td>
         <td><%= entry.activity.name %></td>
         <td><a href="/time_entries/<%= entry.id %>/edit"><%= entry.hours %></a></td>
         <td class="subject"><%= entry.comments %></td>
