Tweaked titles on pages

--- a/app/views/timesheet/index.html.erb
+++ b/app/views/timesheet/index.html.erb
@@ -1,4 +1,4 @@
-<% html_title "Timesheets" %>
+<% html_title "My Timesheet" %>
 
 <% content_for :sidebar do %>
   <h3>Recent Timesheets</h3>
@@ -15,7 +15,7 @@
 
 <div id="timesheet-index">
 <div class="autoscroll">
-  <h2>ATI Timesheet</h2>
+  <h2>My Timesheet</h2>
   <table class="list time-entries">
     <thead>
       <tr><th>Project</th><th>Issue</th><th>Activity</th><th>Hours</th><th>Comment</th></tr>
